--- a/csy/贪吃蛇/css/style.css
+++ b/csy/贪吃蛇/css/style.css
@@ -1,28 +1,36 @@
-#container{
+body {
+    width: 100vw;
+    height: 100vh;
+}
+
+#container {
     border: 1px solid black;
     margin: auto;
     width: 800px;
     height: 800px;
     position: relative;
 }
-.snakesize{
+
+.snakesize {
     width: 25px;
     height: 25px;
     background: greenyellow;
     /* display: inline-block; */
     position: absolute;
 }
-.plane{
+
+.plane {
     width: 800px;
     height: 80px;
-    margin:  auto;
+    margin: auto;
     border: 1px solid black;
     border-bottom: 0px;
     /* box-sizing: border-box; */
     margin-top: 100px;
     position: relative;
 }
-#off{
+
+#off {
     width: 100px;
     height: 28px;
     line-height: 26px;
@@ -30,9 +38,10 @@
     transform: translateY(-50%);
     position: absolute;
     top: 50%;
-    
+
 }
-#planescore{
+
+#planescore {
     width: 250px;
     height: 80px;
     border: 1px solid;
@@ -46,3 +55,108 @@
     font-size: 40px;
     line-height: 80px;
 }
+
+.btn {
+    display: none;
+}
+
+/* 大屏幕 ：大于等于1200px*/
+@media (min-width: 1200px) {}
+
+/*默认*/
+@media (min-width: 980px) {}
+
+/* 平板电脑和小屏电脑之间的分辨率 */
+@media (min-width: 768px) and (max-width: 979px) {}
+
+/* 横向放置的手机和竖向放置的平板之间的分辨率 */
+@media (max-width: 767px) {
+    body {
+        display: flex;
+    }
+
+    #container {
+        border: 1px solid black;
+        width: 80%;
+        height: 100%;
+        position: relative;
+        box-sizing: border-box;
+    }
+
+    .plane {
+        width: 20%;
+        height: 70%;
+        border: 1px solid black;
+        border-right: 0px;
+        margin: 0px;
+        position: relative;
+    }
+
+    #planescore {
+        width: 100%;
+        height: 100px;
+        border-right: 0px;
+        display: inline-grid;
+        font-size: 35px;
+        line-height: 50px;
+        border-left: 0px;
+        border-bottom: 1px;
+    }
+
+    #off {
+        width: 100px;
+        height: 28px;
+        line-height: 26px;
+        box-sizing: border-box;
+        transform: translateX(-50%);
+        position: absolute;
+        top: 85%;
+        left: 50%;
+    }
+
+    .btn {
+        display: inline-block;
+        position: absolute;
+        bottom: 0px;
+        left: 0px;
+        width: 20%;
+        height: 30%;
+    }
+
+    .btn>button {
+        position: absolute;
+        width: 25px;
+        height: 25px;
+    }
+
+    #up {
+        position: absolute;
+        bottom: 30px;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+
+    #left {
+        position: absolute;
+        bottom: 0px;
+        left: 50%;
+        transform: translateX(-170%);
+    }
+
+    #bottom {
+        position: absolute;
+        bottom: 0px;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+
+    #right {
+        position: absolute;
+        bottom: 0px;
+        left: 50%;
+        transform: translateX(75%);
+    }
+}
+
+/* 横向放置的手机及分辨率更小的设备 */
+@media (max-width: 480px) {}
