--- a/csy/贪吃蛇/css/style.css
+++ b/csy/贪吃蛇/css/style.css
@@ -67,7 +67,93 @@ body {
 @media (min-width: 980px) {}
 
 /* 平板电脑和小屏电脑之间的分辨率 */
-@media (min-width: 768px) and (max-width: 979px) {}
+@media (min-width: 768px) and (max-width: 979px) {
+ body {
+        display: flex;
+    }
+
+    #container {
+        border: 1px solid black;
+        width: 80%;
+        height: 100%;
+        position: relative;
+        box-sizing: border-box;
+    }
+
+    .plane {
+        width: 20%;
+        height: 70%;
+        border: 1px solid black;
+        border-right: 0px;
+        margin: 0px;
+        position: relative;
+    }
+
+    #planescore {
+        width: 100%;
+        height: 100px;
+        border-right: 0px;
+        display: inline-grid;
+        font-size: 35px;
+        line-height: 50px;
+        border-left: 0px;
+        border-bottom: 1px;
+    }
+
+    #off {
+        width: 100px;
+        height: 28px;
+        line-height: 26px;
+        box-sizing: border-box;
+        transform: translateX(-50%);
+        position: absolute;
+        top: 85%;
+        left: 50%;
+    }
+
+    .btn {
+        display: inline-block;
+        position: absolute;
+        bottom: 0px;
+        left: 0px;
+        width: 20%;
+        height: 30%;
+    }
+
+    .btn>button {
+        position: absolute;
+        width: 25px;
+        height: 25px;
+    }
+
+    #up {
+        position: absolute;
+        bottom: 30px;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+
+    #left {
+        position: absolute;
+        bottom: 0px;
+        left: 50%;
+        transform: translateX(-170%);
+    }
+
+    #bottom {
+        position: absolute;
+        bottom: 0px;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+
+    #right {
+        position: absolute;
+        bottom: 0px;
+        left: 50%;
+        transform: translateX(75%);
+    }
+}
 
 /* 横向放置的手机和竖向放置的平板之间的分辨率 */
 @media (max-width: 767px) {
